# QuantumEdge

./: README.MD  README.md  docker-compose.yml  nginx.proxy.conf  requirements.txt  supervisord.conf
backend/: Dockerfile  Dockerfile.hf  alembic.ini  main.py  pyproject.toml  requirements.txt  supervisord.conf  train_model.py
backend/alembic/: env.py
backend/app/: celery_worker.py  kafka_producer.py  main.py
backend/app/adapters/: __init__.py  binance_adapter.py  fix_adapter.py  mt5_adapter.py
backend/app/api/: deps.py
backend/app/core/: config.py  connections.py  exchange_adapter.py  redis_client.py  security.py
backend/app/crud/: __init__.py  adaptive.py  audit.py  base.py  forge.py  order.py  payment.py  plan.py  risk.py  sentiment.py  signal.py  subscription.py  user.py
backend/app/db/: base.py  session.py
backend/app/llm_tools/: tool_definitions.py
backend/app/models/: account.py  adaptive.py  audit.py  autotrade.py  backtest.py  collaboration.py  marketplace.py  order.py  paper_trading.py  payment.py  plan.py  reconciliation.py  risk.py  sentiment.py  signal.py  subscription.py  user.py
backend/app/schemas/: adaptive.py  ai.py  audit.py  backtest.py  dashboard.py  forge.py  market_data.py  order.py  payment.py  plan.py  portfolio.py  risk.py  sentiment.py  signal.py  subscription.py  token.py  trade.py  user.py  walkforward.py
backend/app/services/: audit_service.py  (+27 more)
backend/auraquant_backend.egg-info/: PKG-INFO
backend/models/: lgbm_signal_model.onnx  scaler.pkl
backend/scripts/: wait_for_postgres.py
backend/strategy_sandbox/: Dockerfile
(+200 files in other folders)
